traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:7: error: not found: value change
      change.OUEST
      ^